# pulseX_backend

./: README.md  pyproject.toml
app/: main.py
app/core/: config.py  security.py
app/models/: user.py
app/routes/: auth.py  crypto.py
app/services/: coinmarket.py
